@@ -29,6 +29,19 @@ import|;
 end_import
 begin_import
 import|import
+name|com
+operator|.
+name|ibm
+operator|.
+name|icu
+operator|.
+name|text
+operator|.
+name|RawCollationKey
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -124,6 +137,15 @@ name|collator
 init|=
 literal|null
 decl_stmt|;
+DECL|field|reusableKey
+specifier|private
+name|RawCollationKey
+name|reusableKey
+init|=
+operator|new
+name|RawCollationKey
+argument_list|()
+decl_stmt|;
 comment|/**    *     * @param input Source token stream    * @param collator CollationKey generator    */
 DECL|method|ICUCollationKeyFilter
 specifier|public
@@ -208,20 +230,15 @@ name|termLength
 argument_list|()
 argument_list|)
 decl_stmt|;
-name|byte
-index|[]
-name|collationKey
-init|=
 name|collator
 operator|.
-name|getCollationKey
+name|getRawCollationKey
 argument_list|(
 name|termText
+argument_list|,
+name|reusableKey
 argument_list|)
-operator|.
-name|toByteArray
-argument_list|()
-decl_stmt|;
+expr_stmt|;
 name|ByteBuffer
 name|collationKeyBuf
 init|=
@@ -229,7 +246,15 @@ name|ByteBuffer
 operator|.
 name|wrap
 argument_list|(
-name|collationKey
+name|reusableKey
+operator|.
+name|bytes
+argument_list|,
+literal|0
+argument_list|,
+name|reusableKey
+operator|.
+name|size
 argument_list|)
 decl_stmt|;
 name|int
